# Emilio-Sergio-to

./: CMakeLists.txt  CMakeLists.txt.user.03fe60d  CMakeLists.txt.user.e899005  README.md  bishop.cpp  board.cpp  board.h  button.cpp  button.h  chesscell.cpp  chesscell.h  chesspiece.cpp  chesspiece.h  core.cpp  core.h  horse.cpp  king.cpp  main.cpp  pawn.cpp  queen.cpp  resources.qrc  tower.cpp
